# Equipo-410

Equipo410/: main-main.cc
Equipo410/marketplace/: CMakeLists.txt
Equipo410/marketplace/src/Asignatura/: CMakeLists.txt  asignatura-main.cc  asignatura.h
Equipo410/marketplace/src/Estudiante/: CMakeLists.txt  estudiante-main.cc  estudiante.cc  estudiante.h
Equipo410/marketplace/src/ListaSolicitudes/: CMakeLists.txt  listasolicitudes.h
Equipo410/marketplace/src/PlanConvalidacion/: CMakeLists.txt  plan_convalidacion.cc  plan_convalidacion.h
Equipo410/marketplace/src/Profesor/: CMakeLists.txt  profesor-main.cc  profesor.cc  profesor.h
Equipo410/marketplace/src/ProgramaSICUE/: CMakeLists.txt  programa_SICUE-main.cc  programa_SICUE.cc  programa_SICUE.h
Equipo410/marketplace/src/Solicitud/: CMakeLists.txt  solicitud-main.cc  solicitud.cc  solicitud.h
Equipo410/marketplace/src/Universidad/: CMakeLists.txt  universidad-main.cc  universidad.cc  universidad.h
Trabajo/marketplace/src/: CMakeLists.txt
Trabajo/marketplace/src/Asignatura/: asignatura-main.cc  asignatura.h
Trabajo/marketplace/src/Estudiante/: estudiante-main.cc  estudiante.cc  estudiante.h
Trabajo/marketplace/src/Profesor/: profesor-main.cc  profesor.cc  profesor.h
marketplace/src/Estudiante/: CMakeLists.txt  estudiante-main.cc  estudiante.cc  estudiante.h
marketplace/src/PlanConvalidacion/: plan_convalidacion.cc  plan_convalidacion.h
marketplace/src/ProgramaSICUE/: programa_SICUE.cc  programa_SICUE.h
marketplace/src/Solicitud/: CMakeLists.txt  solicitud.cc  solicitud.h
(+10 files in other folders)
